
	* doc/sane-as6e.man: Added info about $PATH. Minor formatting fixes.
	* doc/sane.man: Reorganization. Updated DEVELOPER'S DOCUMENTATION.
	  Rewrote PROBLEMS in a more user-centric way. Added "HOW CAN YOU
	  HELP" section. Added paragraph about SANE device lists. Updated
	  CONTACT section. Minor additions to the gt68xx and plustek
	  entries. Minor spelling fixes.

2003-03-31  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* frontend/saned.c: Include poll.h only if new saned code is
	  used. Fixes compilation on OS/2. Patch from Julien BLACHE
	  <jb@jblache.org>.

2003-03-30  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Medion MD 6228, Microtek
	  ScanPort 3000, and PIE Primefilm 1800u.
	* acinclude.m4 aclocal.m4 configure configure.in backend/net.c
	  backend/net.h doc/sane-net.man doc/saned.man frontend/saned.c
	  include/sane/config.h.in: Added support for IPv6. Updated
	  manpages. Patch from Julien BLACHE <jb@jblache.org>.
	* TODO: Updated net sections. Removed Irix pacht entry. Added
	  entry about libusb switch.

2003-03-28  Oliver Schirrmeister <oschirr@abm.de>

	* backend/fujitsu.c backend/fujitsu-scsi.h: 
	  now really supports the fi-4120C

2003-03-26  Karl Heinz Kremer <khk@khk.net>

	* backend/epson.c: Added workaround for GT-8000 scanners,
	  fixed two warnings reported by der Mouse.

2003-03-24  Rene Rebe <rene.rebe@gmx.net>

	* backend/Makefile.in backend/avision.c backend/avision.conf
	  backend/avision.h doc/descriptions/avision.desc: updated
          avision backend to latest build. This includes user-space
	  USB support and OS/2 thread handling.

2003-03-24  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Canon CanoScan FB620U.
	  Added more info for HP ScanJet 3500c.
	
2003-03-24  Rene Rebe <rene.rebe@gmx.net>

	* include/sane/sanei_usb.h sanei/sanei_usb.c: support for
	  interrupt endpoint reads

2003-03-23  Rene Rebe <rene.rebe@gmx.net>
